--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "americano": "^0.4.3",
+    "body-parser": "^1.15.0",
+    "express": "^4.13.4",
     "website-scraper": "^0.3.1"
   }
 }
