changed main file

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "cozy-displayName": "Web Archives",
   "version": "0.0.1",
   "description": "Save web page back ups on your COzy.",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
