Test champ start npm

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "Save web page back ups on your COzy.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "Yannick Lohse",
   "license": "MIT",
