--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "directories": {
       "packages": "client/jspm_packages"
     },
+    "configFile": "client/config.js",
     "dependencies": {
       "aurelia-animator-css": "npm:aurelia-animator-css@^1.0.0-beta.1.1.0",
       "aurelia-bootstrapper": "npm:aurelia-bootstrapper@^1.0.0-beta.1.1.1",
@@ -75,9 +76,7 @@
       "aurelia-templating-binding": "npm:aurelia-templating-binding@^1.0.0-beta.1.1.0",
       "aurelia-templating-resources": "npm:aurelia-templating-resources@^1.0.0-beta.1.1.0",
       "aurelia-templating-router": "npm:aurelia-templating-router@^1.0.0-beta.1.1.0",
-      "bootstrap": "github:twbs/bootstrap@^3.3.5",
       "fetch": "github:github/fetch@^0.10.1",
-      "font-awesome": "npm:font-awesome@^4.5.0",
       "moment": "npm:moment@^2.11.2",
       "text": "github:systemjs/plugin-text@^0.0.3"
     },
