corrected jspm path

--- a/package.json
+++ b/package.json
@@ -61,9 +61,8 @@
   },
   "jspm": {
     "directories": {
-      "packages": "client/jspm_packages"
+      "baseURL": "client"
     },
-    "configFile": "client/config.js",
     "dependencies": {
       "aurelia-animator-css": "npm:aurelia-animator-css@^1.0.0-beta.1.1.0",
       "aurelia-bootstrapper": "npm:aurelia-bootstrapper@^1.0.0-beta.1.1.1",
