--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cozy-archives",
-  "cozy-displayName": "Web Archives",
+  "cozy-displayName": "Frost",
   "icon-path": "icon.png",
   "version": "0.0.3",
   "description": "Save web page back ups on your Cozy.",
