--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cozydb": "^0.1.10",
     "express": "^4.13.4",
     "jsdom": "^3.1.2",
+    "pumpify": "^1.3.4",
     "q": "^1.4.1",
     "rimraf": "^2.5.2",
     "tar-fs": "^1.10.0",
