--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "cozy-archives",
+  "name": "cozy-frost",
   "cozy-displayName": "Frost",
   "icon-path": "icon.png",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "Save a copy of your favorite web pages, forever.",
   "main": "server.js",
   "scripts": {
